v1.0.0/modules/schema/pages/class/GateInputPin.adoc
= `GateInputPin`
:toclevels: 4


+++Input pin for a logical gate. The condition described in the input pin will give a logical true or false. Result from measurement and calculation are converted to a true or false.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GateInputPin`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`GateInputPin`*
 *** xref::class/PinBranchGroup.adoc[`PinBranchGroup`]
 *** xref::class/PinEquipment.adoc[`PinEquipment`]
 *** xref::class/PinGate.adoc[`PinGate`]
 *** xref::class/PinMeasurement.adoc[`PinMeasurement`]
 *** xref::class/PinTerminal.adoc[`PinTerminal`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GateInputPin {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







Gate {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






GateInputPin -> Gate: Gate


GateInputPin -> DiagramObject: DiagramObjects


GateInputPin -> InstanceSet: InstanceSet


GateInputPin -> Name: Names


GateInputPin -> ChangeSetMember: PropertiesCIMDataObject


GateInputPin -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<Gate,`Gate`>>
| 1
| xref::class/Gate.adoc[`Gate`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<aDLogicKind,`aDLogicKind`>>
| 0..1
| xref::enumeration/AnalogToDigitalLogicKind.adoc[`AnalogToDigitalLogicKind`]
| +++The compare operation.+++

| <<absoluteValue,`absoluteValue`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, use the absolute value for compare..+++

| <<duration,`duration`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++The duration the compare condition need to be present before given a true. Default is 0 seconds.+++

| <<negate,`negate`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Invert/negate the result of the compare.+++

| <<thresholdPercentage,`thresholdPercentage`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The threshold percentage that should be used for compare with the percentage change between input value and threshold value.+++

| <<thresholdValue,`thresholdValue`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The threshold value that should be used for compare with the input value.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#absoluteValue]
=== `absoluteValue`
+++If true, use the absolute value for compare..+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.absoluteValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#aDLogicKind]
=== `aDLogicKind`
+++The compare operation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.aDLogicKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/AnalogToDigitalLogicKind.adoc[`AnalogToDigitalLogicKind`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#duration]
=== `duration`
+++The duration the compare condition need to be present before given a true. Default is 0 seconds.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.duration`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#Gate]
=== `Gate`


[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.Gate`
| Cardinality
| 1
| Type
| xref::class/Gate.adoc[`Gate`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#negate]
=== `negate`
+++Invert/negate the result of the compare.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.negate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#thresholdPercentage]
=== `thresholdPercentage`
+++The threshold percentage that should be used for compare with the percentage change between input value and threshold value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.thresholdPercentage`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#thresholdValue]
=== `thresholdValue`
+++The threshold value that should be used for compare with the input value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.thresholdValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===


