v1.1.0/modules/schema/pages/class/GateInputPin.adoc
= `GateInputPin`
:toclevels: 4


+++Input pin for a logical gate. The condition described in the input pin will give a logical true or false. Result from measurement and calculation are converted to a true or false.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GateInputPin`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`GateInputPin`*
 *** xref::class/PinBranchGroup.adoc[`PinBranchGroup`]
 *** xref::class/PinEquipment.adoc[`PinEquipment`]
 *** xref::class/PinGate.adoc[`PinGate`]
 *** xref::class/PinMeasurement.adoc[`PinMeasurement`]
 *** xref::class/PinTerminal.adoc[`PinTerminal`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Gate,`Gate`>>
//| [[slots_table.Gate]]<<Gate,`Gate`>>
| 1 +
xref::class/Gate.adoc[`Gate`]
| _n/a_
| _n/a_

| <<aDLogicKind,`aDLogicKind`>>
//| [[slots_table.aDLogicKind]]<<aDLogicKind,`aDLogicKind`>>
| 0..1 +
xref::enumeration/AnalogToDigitalLogicKind.adoc[`AnalogToDigitalLogicKind`]
| +++The compare operation.+++
| _n/a_

| <<absoluteValue,`absoluteValue`>>
//| [[slots_table.absoluteValue]]<<absoluteValue,`absoluteValue`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, use the absolute value for compare..+++
| _n/a_

| <<duration,`duration`>>
//| [[slots_table.duration]]<<duration,`duration`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++The duration the compare condition need to be present before given a true. Default is 0 seconds.+++
| _n/a_

| <<negate,`negate`>>
//| [[slots_table.negate]]<<negate,`negate`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Invert/negate the result of the compare.+++
| _n/a_

| <<thresholdPercentage,`thresholdPercentage`>>
//| [[slots_table.thresholdPercentage]]<<thresholdPercentage,`thresholdPercentage`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++The threshold percentage that should be used for compare with the percentage change between input value and threshold value.+++
| _n/a_

| <<thresholdValue,`thresholdValue`>>
//| [[slots_table.thresholdValue]]<<thresholdValue,`thresholdValue`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The threshold value that should be used for compare with the input value.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#absoluteValue]
=== `absoluteValue`
+++If true, use the absolute value for compare..+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.absoluteValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.absoluteValue,&#10548;>>
--
////


//[discrete]
[#aDLogicKind]
=== `aDLogicKind`
+++The compare operation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.aDLogicKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/AnalogToDigitalLogicKind.adoc[`AnalogToDigitalLogicKind`]


|===

////
[.text-left]
--
<<slots_table.aDLogicKind,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#duration]
=== `duration`
+++The duration the compare condition need to be present before given a true. Default is 0 seconds.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.duration`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.duration,&#10548;>>
--
////


//[discrete]
[#Gate]
=== `Gate`



[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.Gate`
| Cardinality
| 1
| Type
| xref::class/Gate.adoc[`Gate`]


|===

////
[.text-left]
--
<<slots_table.Gate,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#negate]
=== `negate`
+++Invert/negate the result of the compare.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.negate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.negate,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#thresholdPercentage]
=== `thresholdPercentage`
+++The threshold percentage that should be used for compare with the percentage change between input value and threshold value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.thresholdPercentage`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.thresholdPercentage,&#10548;>>
--
////


//[discrete]
[#thresholdValue]
=== `thresholdValue`
+++The threshold value that should be used for compare with the input value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GateInputPin.thresholdValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.thresholdValue,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Gate.adoc[`Gate`] | xref::class/Gate.adoc#GateInputPin[`GateInputPin`]


|===

